# cpp-simple-cli-student-mgmt-sys

./: .gitignore  CMakeLists.txt  README.md  class.cpp  class.hpp  classes.cpp  classes.hpp  main.cpp  person.cpp  person.hpp  student.cpp  student.hpp
include/: class.hpp  constants.hpp  options.hpp  person.hpp  student.hpp
src/: class.cpp  main.cpp  options.cpp  person.cpp  student.cpp
